# theSeventh

./: .gitignore  ARCHITECTURE.md  Cargo.toml  MODULE_DEPENDENCIES.md  README.md  REORGANIZATION_SUMMARY.md  STRUCTURE.md
.github/: release.yml
.github/workflows/: android.yml  ci.yml  publish.yml  release.yml
assets/: Typical_2D_platformer_example.ldtk  the_seventh_map.ldtk
src/: colliders.rs  config.rs  game_flow.rs  input.rs  inventory.rs  lib.rs  main.rs  misc_objects.rs  player.rs
src/combat/: attack.rs  damage.rs  health.rs  mod.rs
src/core/: camera.rs  game_flow.rs  game_over.rs  mod.rs
src/engine/: damage.rs
src/entities/: base.rs  enemy.rs  misc_objects.rs  mod.rs  player.rs  player_animation.rs  stats.rs
src/gui/: dialog.rs  mod.rs  player_interface.rs  tooltip.rs
src/menu/: mod.rs  settings.rs
src/physics/: climbing.rs  colliders.rs  mod.rs  walls.rs
src/save/: data.rs  game_start_menu.rs  mod.rs  persistence.rs  ui.rs
src/systems/: mod.rs
src/ui/: hud.rs  mod.rs
src/world/: mod.rs  objects.rs  save_point.rs
