[package]
name = "theSeventh"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs_tilemap = "0.15.0"
bevy = "0.15.0"
derive-getters = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
thiserror = "1.0"
paste = "1.0"
derive_more = "0.99.17"
path-clean = "1.0.1"
bevy_ecs_ldtk = "0.11.0"
bevy_rapier2d = "0.28.0"

[dev-dependencies]
bevy = "0.15"
bevy_rapier2d = "0.28.0"
fake = { version = "2.8.0", features = ["uuid"] }
rand = "0.8"
bevy-inspector-egui = "0.28"
