[package]
name = "theSeventh"
version = "0.1.0"
edition = "2021"
authors = ["Ajustor"]
description = "A 2D platformer game built with Bevy"
repository = "https://github.com/Ajustor/theSeventh"
license = "MIT OR Apache-2.0"
readme = "README.md"

# Optimize for binary size and performance
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Optimize dependencies in dev builds for better performance
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_ecs_tilemap = "0.15.0"
bevy = "0.15.0"
derive-getters = "0.3.0"
bevy-inspector-egui = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
thiserror = "1.0"
paste = "1.0"
derive_more = "0.99.17"
path-clean = "1.0.1"
bevy_ecs_ldtk = "0.11.0"
bevy_rapier2d = "0.28.0"

[dev-dependencies]
bevy = "0.15"
bevy_rapier2d = "0.28.0"
fake = { version = "2.8.0", features = ["uuid"] }
rand = "0.8"
bevy-inspector-egui = "0.28"
