[package]
name = "theSeventh"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_ecs_tilemap = "0.15.0"
bevy = "0.15.0"
bevy_embedded_assets = "0.12"
derive-getters = "0.3.0"
bevy-inspector-egui = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
thiserror = "1.0"
paste = "1.0"
derive_more = "0.99.17"
path-clean = "1.0.1"
bevy_ecs_ldtk = "0.11.0"
bevy_rapier2d = "0.28.0"

[dev-dependencies]
bevy = "0.15"
bevy_rapier2d = "0.28.0"
fake = { version = "2.8.0", features = ["uuid"] }
rand = "0.8"
bevy-inspector-egui = "0.28"

# Android configuration for cargo-apk
[package.metadata.android]
package = "com.theseventh.game"
apk_name = "TheSeventh"
assets = "assets"
resources = "res/android"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
compile_sdk_version = 35
min_sdk_version = 35
target_sdk_version = 35

# Debug signing configuration for development builds
# Note: Uses standard Android debug keystore credentials
# For production releases, configure a proper keystore with secure credentials
[package.metadata.android.signing.debug]
path = "debug.keystore"
keystore_password = "android"

[package.metadata.android.application]
label = "The Seventh"
theme = "@android:style/Theme.NoTitleBar.Fullscreen"

[package.metadata.android.activity]
config_changes = "orientation|keyboardHidden|screenSize"
launch_mode = "singleTop"
orientation = "landscape"
